      rather than replacing their contents.  This implies that the
      mode of the existing file will not be inherited, and an
      existing readonly file will not prevent addSource from
      working.
    * The internal setModes policy now reports "suid/sgid" only for
      files that are setuid or setgid, rather than all files which
      have an explicitly set mode.

  o Bug Fixes:
    * A bug that caused conary to traceback in the face of a file on the 
      filesystem with an unknown uid/gid has been fixed, conary will now
      print an error message instead (bz #977)
    * A bug that caused conary to traceback when an unknown Use flag was
      used when cooking has been fixed (bz #982).  For example, 
      cvc cook --flavor 'foobar', used to create a traceback, now it says
      instead 'Error setting build flag values: No Such Use Flag foobar'
    * Pinned troves no longer are used to determine what troves are updated
      when updateall is run. 

Changes in 1.0.12:
  o Client changes:
    * The rollback command now applies rollbacks up to and including
      the rollback number specified on the command line. It also
      allows the user to specify the number of rollbacks to apply
      (from the top of the stack) instead of which rollback to
      apply. (bz #884)
    * Previously, the code path for installing files as part of a new
      trove required an exception to be handled.  The code has been
      refactored to eliminate the exception in order to reduce install
      times.

  o Build Changes:
    * The cvc command now has a --show-buildreqs option that prints all
      build requirements.  The --no-deps argument for cvc has been
      aliased to --ignore-buildreqs for consistency.

  o Bug Fixes:
    * Installing into a relative root <e.g. --root foo> when running
      as root no longer generates a traceback. (bz #873)
    * Replaced files are now stored in rollbacks. (bz #915)